--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "class-variance-authority": "0.7.0",
+    "classnames": "2.3.2",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "eslint-plugin-tailwindcss": "3.13.0",
