--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "eslint-plugin-tailwindcss@3.13.0": "patches/eslint-plugin-tailwindcss@3.13.0.patch"
+    }
   }
 }
